--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-9.68MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-2.84MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.26MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.11MB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-3.52MB/s(Youtube:不良林), server: 103.173.155.72, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-456.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇩🇪 德国-3.49MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇬🇧 英国-3.23MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-478.1KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.17MB/s(Youtube:不良林), server: 172.104.251.52, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 23.224.33.72, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.68.135.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.43MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-708.0KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.84MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-708.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-9.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-708.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-708.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-9.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-708.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-708.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-9.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-708.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-9.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.11MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-456.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-478.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-708.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
