--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.85MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20715, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇫🇷 法国-1.27MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 38.68.135.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇻🇳 越南-4.21MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-20.49MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20727, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-16.05MB/s(Youtube:不良林), server: azqt001.xiba1.xyz, port: 20739, type: trojan, password: 965425cb-5d9e-306a-94bf-9961dd0ecf17, sni: azqt001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-11.50MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20721, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.10MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-379.2KB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.31MB/s(Youtube:不良林), server: cmhk1.linhun11.xyz, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, sni: cmhk1.linhun11.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-12.39MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.08MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.92MB/s(Youtube:不良林), server: 107.173.111.182, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: 138.2.89.190, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-7.75MB/s(Youtube:不良林), server: 20.214.88.99, port: 45555, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.21MB/s(Youtube:不良林)
-      - 🇭🇰 香港-20.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
